package com.job.designpattern.state;

public abstract class State {
    public abstract void writeProgram(Work work);
}
